--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
-	<groupId>com.pc.demo</groupId>
+	<groupId>com.pc.demo.orchestrator</groupId>
 	<artifactId>lambda-orchestrator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>lambda-orchestrator</name>
@@ -43,11 +43,42 @@
 			<version>1.1.0</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
+		<!-- dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
+		</dependency -->
+		<!-- dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20211205</version>
+		</dependency -->
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-rds -->
+		<!-->dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-rds</artifactId>
+			<version>1.12.189</version>
+		</dependency -->
+
+		<dependency>
+		    <groupId>software.amazon.awssdk</groupId>
+		    <artifactId>rds</artifactId>
+		    <version>2.17.160</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.22</version>
+		    <scope>provided</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>42.3.3</version>
+		</dependency>
+		
 	</dependencies>
 
 	<dependencyManagement>
